# PuhuLang

./: CMakeLists.txt  PuhuLang.sln  ToyLang.sln
PuhuLang/: Chunk.cpp  Chunk.h  Compiler.cpp  Compiler.h  Debug.cpp  Debug.h  List.h  Main.cpp  Natives.h  PuhuLang.vcxproj  PuhuLang.vcxproj.filters  Scanner.cpp  Scanner.h  VM.cpp  VM.h  Value.cpp  Value.h  app.puh
ToyLang/: Common.h  Main.cpp  Scanner.cpp  Scanner.h  ToyLang.vcxproj  VM.h  Value.cpp  Value.h  app.puh
bin-int/Debug-Win32/: vc142.idb
bin-int/Debug-x64/: vc142.idb
diag/: Report20200429-2259.diagsession
etc/: AST.txt  Fibb.py  InstructionList.txt  ObjModel.puh  app.puh  app2.puh  binOp_table.txt  cfg.txt  fibb.puh  game_of_life.puh  op_table.txt  ptrTest.puh  puhu syntax.txt  unrOp_table.txt
src/: AST.cpp  AST.h  ArrayList.h  AstDebugger.cpp  AstDebugger.h  AstDebugger.hpp  AstVisitor.h  AstVisitor.hpp  Callable.cpp  Callable.h  Callable.hpp  Chunk.hpp  CodeGen.hpp  Common.h  Common.hpp  Debug.cpp  Debug.h  DeclCheck.cpp  DeclCheck.h  DeclParser.cpp  DeclParser.hpp  Enviroment.hpp  Environment.h  Expr.cpp  Expr.h  Expr.hpp  IRChunk.hpp  IRGen.hpp  InstVisitor.hpp  Instruction.cpp  Instruction.h  Interpreter.cpp  Interpreter.h  Interpreter.hpp  Log.hpp  Main.cpp  Namespace.hpp  Natives.hpp  Parser.cpp  Parser.h  (+25 more)
src/Native/: Native.cpp  Native.hpp  NativeConsole.cpp  (+1 more)
test/: parserTest1.puh  parserTest2.puh  parserTest3.puh  parserTest4.puh  parserTest5.puh  parserTest6.puh  parserTest7.puh  rule110.puh  scantest1.puh
tool/: Fibb.py  InstGen.py  Instruction.cpp  Instruction.h  genOps.py
(+28 files in other folders)
